--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ php:
 
 before_script:
   - sudo apt-get install vsftpd
+  - sudo sed -i s/#local_enable=YES/local_enable=YES/g /etc/vsftpd.conf
+  - sudo sed -i s/#write_enable=YES/write_enable=YES/g /etc/vsftpd.conf
+  - sudo /etc/init.d/vsftpd restart
