--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
   - 5.5
 
 before_script:
+  - sudo useradd -d /home/testuser -m testuser
+  - sudo passwd testuser
   - sudo apt-get install vsftpd
   - sudo sed -i s/#local_enable=YES/local_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#write_enable=YES/write_enable=YES/g /etc/vsftpd.conf
