--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ before_script:
   - sudo sed -i s/#local_enable=YES/local_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#write_enable=YES/write_enable=YES/g /etc/vsftpd.conf
   - sudo /etc/init.d/vsftpd restart
+  - cat /etc/vsftpd.conf
