--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
   - sudo apt-get install vsftpd
   - sudo sed -i s/#local_enable=YES/local_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#write_enable=YES/write_enable=YES/g /etc/vsftpd.conf
-  - sudo /etc/init.d/vsftpd restart
+  - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
