Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ before_script:
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
+  - sudo mkdir /srv/files/ftp
+  - sudo usermod -d /srv/files/ftp ftp
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
