--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,15 @@ before_script:
   - sudo mkdir /ftp
   - sudo usermod -d /ftp ftp
   - ls
+
+  - echo "this is some data" >> /ftp/file_1.txt
+  - echo "this is some data" >> /ftp/file_2.txt
+
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
-  - sudo sed -i s/#local_enable=YES/anon_root=/ftp/g /etc/vsftpd.conf
+  - search_line = '#local_enable=YES'
+  - replace_line = 'anon_root=/ftp'
+  - sudo sed -i "s%$search_line%$replace_line%g" /etc/vsftpd.conf
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
