--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,6 @@ before_script:
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
-  - search_line = '#local_enable=YES'
-  - replace_line = 'anon_root=/ftp'
-  - sudo sed -i "s%$search_line%$replace_line%g" /etc/vsftpd.conf
+  - sudo sed -i s:#local_enable=YES:anon_root=/ftp:g /etc/vsftpd.conf
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
