--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ php:
 
 before_script:
   - sudo apt-get install vsftpd
-  - sudo mkdir /ftp
-  - sudo usermod -d /ftp ftp
+  - sudo mkdir ftp
+  - sudo usermod -d ftp ftp
   - ls
   - pwd
-  - sudo echo "this is some data" >> sudo /ftp/file_1.txt
-  - sudo echo "this is some data" >> sudo /ftp/file_2.txt
+  - sudo echo "this is some data" >> sudo ftp/file_1.txt
+  - sudo echo "this is some data" >> sudo ftp/file_2.txt
 
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
-  - sudo sed -i s:#local_enable=YES:anon_root=/ftp:g /etc/vsftpd.conf
+  - sudo sed -i s:#local_enable=YES:anon_root=/home/travis/build/nathanmac/test/ftp:g /etc/vsftpd.conf
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
