--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,20 @@ php:
 
 before_script:
   - sudo apt-get install vsftpd
-  - sudo mkdir ftp
-  - sudo usermod -d ftp ftp
+  - sudo mkdir $HOME_DIR/ftp/pub
+  - sudo usermod -d -R $HOME_DIR/ftp ftp
   - ls
   - pwd
-  - sudo echo "this is some data" >> sudo ftp/file_1.txt
+  - $HOME_DIR
+  - sudo echo "this is some data" >> sudo ftp/pub/file_1.txt
   - sudo echo "this is some data" >> sudo ftp/file_2.txt
+  - ls $HOME_DIR/ftp
+  - ls $HOME_DIR/ftp/pub
+
 
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
-  - sudo sed -i s:#local_enable=YES:anon_root=/home/travis/build/nathanmac/test/ftp:g /etc/vsftpd.conf
+  - sudo sed -i s:#local_enable=YES:anon_root=$HOME_DIR/ftp:g /etc/vsftpd.conf
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
