--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,19 @@ php:
 
 before_script:
   - sudo apt-get install vsftpd
-  - sudo mkdir /ftp
-  - sudo usermod -d /ftp ftp
+  - sudo mkdir /home/travis/build/ftp
+  - sudo usermod -d /home/travis/build/ftp ftp
   - ls
   - pwd
-  - sudo echo "this is some data" >> sudo /ftp/pub/file_1.txt
-  - sudo echo "this is some data" >> sudo /ftp/file_2.txt
+  - sudo echo "this is some data" >> sudo /home/travis/build/ftp/file_1.txt
+  - sudo echo "this is some data" >> sudo /home/travis/build/ftp/file_2.txt
 
-  - ls /ftp
+  - ls /home/travis/build/ftp
 
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
-  - sudo sed -i s:#local_enable=YES:anon_root=/ftp:g /etc/vsftpd.conf
+  - sudo sed -i s:#local_enable=YES:anon_root=/home/travis/build/ftp:g /etc/vsftpd.conf
 
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
