Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,17 @@ php:
 before_script:
   - sudo apt-get install vsftpd
   - sudo mkdir /home/travis/build/ftp
-  - sudo usermod -d /home/travis/build/ftp ftp
+  - sudo mkdir /home/travis/build/ftp/pub
+  - sudo usermod -d -R /home/travis/build/ftp ftp
   - sudo chmod 722 /home/travis/build/ftp
+
   - echo "this is some data" | sudo tee /home/travis/build/ftp/file_1.txt
   - echo "this is some data" | sudo tee /home/travis/build/ftp/file_2.txt
 
   - sudo sed -i s/#anonymous_enable=YES/anonymous_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_upload_enable=YES/anon_upload_enable=YES/g /etc/vsftpd.conf
   - sudo sed -i s/#anon_mkdir_write_enable=YES/anon_mkdir_write_enable=YES/g /etc/vsftpd.conf
-  - sudo sed -i s:#local_enable=YES:anon_root=/home/travis/build/ftp:g /etc/vsftpd.conf
+  - echo "anon_root=/home/travis/build/ftp" | sudo tee -a /etc/vsftpd.conf
 
   - sudo service vsftpd restart
   - cat /etc/vsftpd.conf
