--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ php:
   - 5.5
 
 before_script:
+  - sudo apt-get install -y beanstalkd
+  - service beanstalkd start
+
   - sudo apt-get install vsftpd
   - sudo mkdir /home/travis/build/ftp
   - sudo mkdir /home/travis/build/ftp/pub
